deploy-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backend-nextcloud
  name: backend-nextcloud
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-nextcloud
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: backend-nextcloud
    spec:
      containers:
      - image: 19995/nextcloud_back:1.0.0
        name: backend-nextcloud
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 300m
            memory: 512Mi
