deploy-front.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend-nextcloud
  name: frontend-nextcloud
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-nextcloud
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: frontend-nextcloud
    spec:
      containers:
      - image: 19995/nextcloud_front:1.0.0
        name: frontend-nextcloud
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 300m
            memory: 512Mi
        volumeMounts:
        - mountPath: /etc/nginx/conf.d/
          name: config-nginx
      volumes:
      - name: config-nginx
        configMap:
          name: config-nginx
