service-backend.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: backend-nextcloud
  type: ClusterIP
