service-front.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: frontend-nextcloud
  type: ClusterIP
